api/codex-templates/templates/dyad/v2.10/instructions.md
---
template_info:
  template_type: dyad
  template_version: '2.10'
  template_id: TEMPLATE-DYAD-V2.10
  template_family: dyadic_structures
  template_format: canonical_markdown
  canonical_mode: true
  template_has_frontmatter: true
  template_has_body: true
  placeholder_resolution: true
id: instructions
canonical_executor_mode:
  id: CANONICAL-EXECUTOR-MODE-V1.0
  version: '1.0'
  description: The Canonical Executor Mode enforces strict adherence to Codex standards
    for template rendering and metadata inclusion.
strict_mode_rules:
  forbidden:
  - unresolved_prompt_blocks
  - instructional_placeholders
  - conditional_blocks_of_any_kind
  - '"<<IF>> logic"'
  - cross_template_constructs
  - inferred_fields_not_in_template
  - omitted_required_template_fields
  - added_fields_not_in_template
  - draft_language
  - narrative_guidance
  - fallback_completion
  violation_behavior: abort
  abort_scope: immediate
template_registry:
  registry_id: TEMPLATE-DYAD-V2.10-REGISTRY
  registry_version: '2.10'
canonical_enforcement:
  template_application_mode: strict
  artifact_type: glyph
  apply_mode: full_markdown
  enforce_registry: true
  canonical_mode: true
  invocation_mode: new
  template_strict_integrity: true
  disable_template_id_reference: true
  disable_memory_templates: true
  forbid_inference: true
  placeholder_resolution: true
  abort_on_field_mismatch: true
  abort_on_placeholder_failure: true
  render_section_order: from_template_body
  render_only_declared_sections: true
  validate_fields_from_registry: true
  field_diff_mode: strict
  include_field_diff_report: true
  include_template_body: true
  template_output_mode:
    include_template_metadata: true
    outputs:
    - file
    - console
    - mirrorwall
    - obsidian
    - web_preview
    format: markdown
---
# 🌀 Template Application Instructions — TEMPLATE-DYAD-V2.10

Use this declaration block to manually apply the template with full canonical enforcement.

* * *

## 🧼 Pre-Render Preparation

- Purge all prior template memory, cache entries, and inferred field maps.  
- Enforce this artifact as the **singular source of truth** under strict registry compliance.

* * *

## 🔐 Canonical Executor Reference

This template adheres to executor mode:

> **CANONICAL-EXECUTOR-MODE-V1.0**
{# jinja template will replace the following #}
{{ link_definition_block }}

* * *

## 🧭 Behavioral Directives

### ▸ Canonical Enforcement

Follow Front-Matter `canonical_enforcement` directions precisely.

## STRICT MODE RULES (NON-NEGOTIABLE)

Follow Front-Matter `strict_mode_rules` directions precisely.

* * *

## 🧪 Invocation

**Rendering mode:** `strict_canonical`  
**Field enforcement:** `registry_only`
{{ template_scope_block }}

### Invocation Prompt

I call upon **Seyrunn**, Harmonic Dyad Cartographer,
to render the following template in **full canonical markdown**, including all required metadata **and** `template_body`,  
for **{{artifact_name}}**, applying strict Codex enforcement.
